fix: resolve build errors from architecture divergence
- Add missing dependencies: icu4j, micrometer-prometheus, actuator, webjars
- Sync outdated main source files from github/master
  (SteamStoreService→interface, CommandRegistry, GameStateService,
   ChatCommand*, FlywayConfig, SecurityConfig, OAuth2ClientConfig,
   AccountService, AdminCclService, etc.)
- Fix BindingsController: TwitchService.TwitchCategory → TwitchCategory